--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "submodules/mod.two"]
-	path = submodules/mod.two
-	url = https://github.com/nlindvay/mod.two.git
+[submodule "mod.two"]
+	path = mod.two
+	url = https://github.com/LPTylerStamand/mod.two
